--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
       <button class="tab-btn" role="tab" aria-selected="false" aria-controls="tab-esercizi" id="btn-esercizi">Esercizi (scheda)</button>
 	  <button class="tab-btn"
         type="button"
-        onclick="window.location.href='L5_Algebra_claude.html'">
+        onclick="window.open('L5_Algebra_claude.html', '_blank')">
 		Esercizi (Claude)
 	  </button>
 
@@ -2276,3 +2276,4 @@
 </body>
 
 </html>
+
