--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 	  <button class="tab-btn"
         type="button"
         onclick="window.open('L5_Algebra_claude.html', '_blank')">
-		Esercizi (Claude)
+		Schede (Claude)
 	  </button>
 
 
@@ -2276,4 +2276,5 @@
 </body>
 
 </html>
+
 
